Removing unneeded console.log from main.js and changing the breakpoint-indicator styles from display: none to hidden visibility to fix safari bug

--- a/web/app/themes/brian-thompson/assets/styles/components/_breakpoint-indicator.scss
+++ b/web/app/themes/brian-thompson/assets/styles/components/_breakpoint-indicator.scss
@@ -1,5 +1,8 @@
 #breakpoint-indicator{ // We can use this to tell JS which breakpoint we are on! Nifty!
-  display: none;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
   &::after {
     @include media-nano {
       content: 'nano';
